--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "puppeteer": "13.5.1",
     "sequelize": "6.17.0",
     "sequelize-cli": "6.4.1"
+  },
+  "dependencies": {
+    "express-async-errors": "^3.1.1"
   }
 }
